flux/infra/traefik/atuhelia.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: traefik
spec:
  forwardAuth:
    address: "http://authelia.auth.svc.cluster.local:9091/api/verify"
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
