flux/infra/traefik/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-api-internal-only
  namespace: traefik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              name: homepage
      ports:
        - protocol: TCP
          port: 8080
    
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
